# ai-shopping-audit

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.codex/: config.toml
.gemini/: settings.json
benchmark/: BENCHMARK.md  urls.txt
browser-extension/: README.md  i18n.js  manifest.json  popup.css  popup.html  popup.js
browser-extension-standalone/: SPIKE-REPORT.md  engine-global.mjs  engine.mjs  entities.mjs  manifest.json  popup.html  popup.js
contracts/: agent-card.example.json  audit-result.schema.json  product-agent-run.schema.json  product-optimization-result.schema.json
docs/: BYO-KEYS.md  INTEROPERABILITY.md  LAUNCH.md  METRICS.md  PRIVACY.md  QUICKSTART-AI-ASSISTANTS.md  ROADMAP.md  RULES.md  architecture.md  frontend-agent-architecture.md  geo-methodology.md  limitations.md  product-data-agent-design.md  product-readiness-agent.md  product-visibility-agent.md  repository-design.md  scoring-methodology.md  seo-methodology.md
examples/: demo-apparel.csv  messy-apparel.csv  prompt-pack.yaml
frontend/: README.md  app.js  index.html  styles.css
scripts/: benchmark.py  package-extension.sh
tests/: test_agent.py  test_agent_requirements.py  test_catalog.py  test_chat.py  test_claims.py  test_dashboard.py  test_discovery.py  test_env.py  test_extension.py  test_metric_mapping.py  test_model_providers.py  test_online_rules.py  test_optimization.py  test_qa.py  test_quality.py  test_real_page_extraction.py  test_reporting.py  (+3 more)
(+81 files in other folders)
