[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "catalogready-ai"
version = "0.5.0"
description = "Open-source product-data readiness checker for AI shopping"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CatalogReady contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "mcp>=1.27,<2",
  "uvicorn>=0.34,<1",
]

[project.scripts]
catalogready = "catalogready.cli:main"
catalogready-chat = "catalogready.chat:main"
catalogready-mcp = "catalogready.mcp_server:main"
catalogready-api = "catalogready.api_server:main"
catalogready-local = "catalogready.local_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/catalogready"]
